2010-12-24  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        CSSStyleSelector cleanup
        https://bugs.webkit.org/show_bug.cgi?id=51597

        Make some methods const. Add assertion to checkOneSelector, with the
        intention of later removing the if (!e) check (this is hot code).

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::locateCousinList):
        (WebCore::CSSStyleSelector::canShareStyleWithElement):
        (WebCore::CSSStyleSelector::locateSharedStyle):
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):
        (WebCore::CSSStyleSelector::mmLength):
        (WebCore::CSSStyleSelector::inchLength):
        (WebCore::CSSStyleSelector::getColorFromPrimitiveValue):
        (WebCore::CSSStyleSelector::hasSelectorForAttribute):
        * css/CSSStyleSelector.h:
        (WebCore::CSSStyleSelector::fontSelector):

2010-12-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/8758386> The web process uses its own credential storage
        https://bugs.webkit.org/show_bug.cgi?id=51599

        * WebCore.exp.in: Export CredentialStorage::getFromPersistentStorage(), Credential::hasPassword(),
        and Credential::isEmpty().

2010-12-24  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Darin Adler.

        [V8] Rename V8CustomEventListener.{h,cpp} to V8EventListener.{h,cpp}
        https://bugs.webkit.org/show_bug.cgi?id=51595

        * WebCore.gypi:
        * bindings/v8/V8DOMWrapper.cpp:
        * bindings/v8/V8EventListener.cpp: Renamed from WebCore/bindings/v8/custom/V8CustomEventListener.cpp.
        (WebCore::V8EventListener::V8EventListener):
        (WebCore::V8EventListener::getListenerFunction):
        (WebCore::V8EventListener::callListenerFunction):
        * bindings/v8/V8EventListener.h: Renamed from WebCore/bindings/v8/custom/V8CustomEventListener.h.
        (WebCore::V8EventListener::create):